--- a/Style.css
+++ b/Style.css
@@ -165,21 +165,89 @@ button[type="btnPOP"]:active {
   margin-right: 25px;
 }
 
-.section1_inputs {
-  display: flex;
-}
-
-.section1_btnOrders {
+.section1_titles {
   display: flex;
   justify-content: center;
 }
 
-.section1_buttonsMOV,
-.section1_buttonsXCHG {
+.section1_title_input,
+.section1_title_output {
+  color: purple;
+  margin-top: 50px;
+}
+
+.section1_title_input {
+  margin-right: 60px;
+}
+
+.section1_title_output {
+  margin-left: 60px;
+}
+
+.section1_inputs {
   display: flex;
-  flex-direction: column;
-  width: 120px;
-  margin: 20px 40px 20px 40px;
+}
+
+.section1_orders {
+  display: flex;
+  margin-top: 70px;
+  justify-content: center;
+}
+
+.section1_orders_text {
+  margin: 0 35px 0 35px;
+  padding: 20px;
+  font-size: 20px;
+}
+
+#form_from,
+#form_to {
+  padding: 15px 25px 15px 25px;
+  border: none;
+  /* font-weight: bold; */
+  border-radius: 2rem;
+  font-size: 15px;
+  background: #ecf0f3;
+  box-shadow: -6px -6px 14px rgba(255, 255, 255, 0.7),
+    -6px -6px 10px rgba(255, 255, 255, 0.5),
+    6px 6px 8px rgba(255, 255, 255, 0.075), 6px 6px 10px rgba(0, 0, 0, 0.15);
+  cursor: pointer;
+}
+
+.section1_orders_btn {
+  display: flex;
+  justify-content: center;
+  margin-top: 35px;
+}
+
+.section1_buttons_movBtn,
+.section1_buttons_xchgBtn {
+  padding: 15px 25px 15px 25px;
+  border: none;
+  /* font-weight: bold; */
+  border-radius: 2rem;
+  background: #ecf0f3;
+  box-shadow: -6px -6px 14px rgba(255, 255, 255, 0.7),
+    -6px -6px 10px rgba(255, 255, 255, 0.5),
+    6px 6px 8px rgba(255, 255, 255, 0.075), 6px 6px 10px rgba(0, 0, 0, 0.15);
+  transition: 0.2s;
+  cursor: pointer;
+}
+
+.section1_buttons_movBtn:hover,
+.section1_buttons_xchgBtn:hover {
+  color: purple;
+  box-shadow: -2px -2px 6px rgba(255, 255, 255, 0.6),
+    -2px -2px 4px rgba(255, 255, 255, 0.4),
+    2px 2px 2px rgba(255, 255, 255, 0.05), 2px 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.section1_buttons_MOVBtn {
+  margin-right: 15px;
+}
+
+.section1_buttons_XCHGBtn {
+  margin-left: 15px;
 }
 
 /************* SECTION 2 ******************/
